fixed overflow bug

--- a/src/app/shared/theme-chooser/theme-chooser.scss
+++ b/src/app/shared/theme-chooser/theme-chooser.scss
@@ -13,6 +13,7 @@ $theme-chooser-accent-stripe-size: 6px;
   [md-menu-item] {
     flex: 0 0 auto;
     padding: 0;
+    overflow: hidden;
   }
 
   .theme-chooser-swatch {
